--- a/UtensilQuest/Assembly-CSharp.csproj
+++ b/UtensilQuest/Assembly-CSharp.csproj
@@ -46,7 +46,10 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
-     <Compile Include="Assets\ChangeScene.cs" />
+     <Compile Include="Assets\Scripts\UI Scripts\AgentStartGame.cs" />
+     <Compile Include="Assets\Scripts\UI Scripts\ChangeScene.cs" />
+     <Compile Include="Assets\Scripts\UI Scripts\GetPlayerIP.cs" />
+     <Compile Include="Assets\Scripts\UI Scripts\HandlerConnect.cs" />
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Program Files (x86)/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/4.6.1/UnityEngine.UI.dll</HintPath>
  </Reference>
