Started working on a better version of the importer

--- a/UtensilQuest/UnityVS.UtensilQuest.CSharp.csproj
+++ b/UtensilQuest/UnityVS.UtensilQuest.CSharp.csproj
@@ -80,6 +80,7 @@
     <Compile Include="Assets\OVR\Scripts\Util\OVRUGUI.cs" />
     <Compile Include="Assets\OVR\Scripts\Util\OVRVisionGuide.cs" />
     <Compile Include="Assets\Scripts\AgentBehaviour.cs" />
+    <Compile Include="Assets\Scripts\Door.cs" />
     <Compile Include="Assets\Scripts\Enemy.cs" />
     <Compile Include="Assets\Scripts\GameManager.cs" />
     <Compile Include="Assets\Scripts\Item.cs" />
