--- a/UtensilQuest/UnityVS.UtensilQuest.CSharp.csproj
+++ b/UtensilQuest/UnityVS.UtensilQuest.CSharp.csproj
@@ -97,6 +97,7 @@
     <None Include="Assets\Plugins\donotdelete.txt" />
     <None Include="Assets\Plugins\x86\donotdelete.txt" />
     <None Include="Assets\Plugins\x86_64\donotdelete.txt" />
+    <None Include="Assets\Shaders\VertexColour.shader" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\SyntaxTree\UnityVS\2013\UnityVS.CSharp.targets" />
 </Project>
