We have a minimap!

--- a/UtensilQuest/UnityVS.UtensilQuest.CSharp.csproj
+++ b/UtensilQuest/UnityVS.UtensilQuest.CSharp.csproj
@@ -90,6 +90,7 @@
     <Compile Include="Assets\Scripts\UI Scripts\GetPlayerIP.cs" />
     <Compile Include="Assets\Scripts\UI Scripts\HandlerConnect.cs" />
     <Compile Include="Assets\Scripts\UI Scripts\HandlerScrollViewController.cs" />
+    <Compile Include="Assets\Scripts\UI Scripts\MiniMapController.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\OVR\Shaders\OVRGUIShader.shader" />
