New 3 parts gamers now work

--- a/UtensilQuest/UnityVS.UtensilQuest.CSharp.csproj
+++ b/UtensilQuest/UnityVS.UtensilQuest.CSharp.csproj
@@ -91,6 +91,7 @@
     <Compile Include="Assets\Scripts\UI Scripts\HandlerConnect.cs" />
     <Compile Include="Assets\Scripts\UI Scripts\HandlerScrollViewController.cs" />
     <Compile Include="Assets\Scripts\UI Scripts\MiniMapController.cs" />
+    <Compile Include="Assets\Scripts\WinZone.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\OVR\Shaders\OVRGUIShader.shader" />
