boxes appearing, but getting sized weirdly

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 /UtensilQuest/Temp
 *.csproj
 *.sln
+/UtensilQuest/Assembly-UnityScript-firstpass.unityproj
+/UtensilQuest/Assembly-UnityScript-firstpass-vs.unityproj
