--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@
 /UtensilQuest/UtensilQuest.userprefs
 /UtensilQuest/Assembly-UnityScript-firstpass-vs.unityproj
 /UtensilQuest/Assembly-UnityScript-firstpass.unityproj
+/UtensilQuest/Build/UtensilQuest_Data/output_log.txt
